--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -2,10 +2,6 @@
 @import url("https://fonts.googleapis.com/css?family=Lato:300,400|Poppins:300,400,800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap");
 
-body {
-  background-color: #010;
-}
-
 .dm-serif-text {
   font-family: "DM Serif", serif;
 }
@@ -31,7 +27,7 @@ body {
   margin-top: -10px;
 }
 
-.block {
+.pink-block {
   width: 0%;
   height: 100%;
   background: #e91e63;
@@ -40,7 +36,7 @@ body {
   animation-delay: 2s;
 }
 
-.text {
+.fullstack-dev-text {
   animation: secFadeIn 2s forwards;
   animation-delay: 3.2s;
   opacity: 0;
